# sqlmesh-local-exploration

./: .gitignore  config.yaml  pyproject.toml
models/: incremental_model.sql
models/bronze/mt5/p03_ts01/: p03_ts01_mt5_deals.sql
models/bronze/mt5/p03_ts02/: p03_ts02_mt5_deals.sql
models/silver/mt5/: union_deal.sql  union_user.sql  union_user_mv.sql
seeds/: seed_data.csv
signals/: __init__.py
