[tool.poetry]
name = "sqlmesh-local-poc"
version = "0.1.0"
description = ""
authors = ["fauzan-deriv <fauzan@regentmarkets.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
sqlmesh = {extras = ["bigquery", "web"], version = "^0.184.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
